--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>倒计时数字</title>
     <link rel="stylesheet" href="style.css"/>
-    <script src="digit.js"></script>
-    <script src="script.js"></script>
+    <script defer="true" src="digit.js"></script>
+    <script defer="true" src="script.js"></script>
 </head>
 <body>
 
